deploy: 6ce5f9bbc5cd786fcefe1631076ee4dd2bb23b18

--- a/tutorials/01_Getting_Started.ipynb
+++ b/tutorials/01_Getting_Started.ipynb
@@ -691,25 +691,18 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2020-08-31 14:48:41,516 - INFO - deepecho.models.par - PARModel(epochs=1024, max_seq_len=100, sample_size=1, cuda='cpu', verbose=True) instance created\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PARModel(epochs=1024, max_seq_len=100, sample_size=1, cuda='cpu', verbose=True) instance created\n"
+      "PARModel(epochs=1024, sample_size=1, cuda='cpu', verbose=True) instance created\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 1024 | Loss 0.024657899513840675: 100%|██████████| 1024/1024 [01:49<00:00,  9.33it/s]\n",
-      "100%|██████████| 5/5 [00:00<00:00, 78.61it/s]\n"
+      "Epoch 1024 | Loss 0.02675650641322136: 100%|██████████| 1024/1024 [02:05<00:00,  8.19it/s] \n",
+      "100%|██████████| 5/5 [00:00<00:00, 62.06it/s]\n"
      ]
     },
     {
@@ -744,177 +737,177 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>New York</td>\n",
+       "      <td>California</td>\n",
        "      <td>0</td>\n",
-       "      <td>802.512064</td>\n",
-       "      <td>41</td>\n",
+       "      <td>2914.035253</td>\n",
+       "      <td>168</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0</td>\n",
-       "      <td>New York</td>\n",
+       "      <td>California</td>\n",
        "      <td>1</td>\n",
-       "      <td>902.553494</td>\n",
-       "      <td>48</td>\n",
+       "      <td>2875.666793</td>\n",
+       "      <td>168</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0</td>\n",
-       "      <td>New York</td>\n",
+       "      <td>California</td>\n",
        "      <td>2</td>\n",
-       "      <td>920.184932</td>\n",
-       "      <td>61</td>\n",
+       "      <td>3044.118317</td>\n",
+       "      <td>170</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0</td>\n",
-       "      <td>New York</td>\n",
+       "      <td>California</td>\n",
        "      <td>3</td>\n",
-       "      <td>1081.714005</td>\n",
-       "      <td>62</td>\n",
+       "      <td>3244.566601</td>\n",
+       "      <td>230</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0</td>\n",
-       "      <td>New York</td>\n",
+       "      <td>California</td>\n",
        "      <td>4</td>\n",
-       "      <td>1402.645716</td>\n",
-       "      <td>95</td>\n",
+       "      <td>3391.854591</td>\n",
+       "      <td>198</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>0</td>\n",
-       "      <td>New York</td>\n",
+       "      <td>California</td>\n",
        "      <td>5</td>\n",
-       "      <td>2520.183718</td>\n",
-       "      <td>136</td>\n",
+       "      <td>4439.453731</td>\n",
+       "      <td>252</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>0</td>\n",
-       "      <td>New York</td>\n",
+       "      <td>California</td>\n",
        "      <td>6</td>\n",
-       "      <td>1520.201774</td>\n",
-       "      <td>75</td>\n",
+       "      <td>3582.236903</td>\n",
+       "      <td>215</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>1</td>\n",
-       "      <td>New York</td>\n",
+       "      <td>California</td>\n",
        "      <td>0</td>\n",
-       "      <td>686.503549</td>\n",
-       "      <td>39</td>\n",
+       "      <td>2789.442373</td>\n",
+       "      <td>175</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>1</td>\n",
-       "      <td>New York</td>\n",
-       "      <td>1</td>\n",
-       "      <td>896.953437</td>\n",
-       "      <td>53</td>\n",
+       "      <td>California</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2887.875587</td>\n",
+       "      <td>207</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>1</td>\n",
-       "      <td>New York</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1045.773419</td>\n",
-       "      <td>62</td>\n",
+       "      <td>California</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2981.336418</td>\n",
+       "      <td>197</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>1</td>\n",
-       "      <td>New York</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1192.191224</td>\n",
-       "      <td>92</td>\n",
+       "      <td>California</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3184.971912</td>\n",
+       "      <td>183</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>1</td>\n",
-       "      <td>New York</td>\n",
+       "      <td>California</td>\n",
        "      <td>4</td>\n",
-       "      <td>1525.217500</td>\n",
-       "      <td>75</td>\n",
+       "      <td>3413.649285</td>\n",
+       "      <td>230</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>1</td>\n",
-       "      <td>New York</td>\n",
+       "      <td>California</td>\n",
        "      <td>5</td>\n",
-       "      <td>2426.323658</td>\n",
-       "      <td>158</td>\n",
+       "      <td>4596.725891</td>\n",
+       "      <td>312</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>1</td>\n",
-       "      <td>New York</td>\n",
+       "      <td>California</td>\n",
        "      <td>6</td>\n",
-       "      <td>1510.210142</td>\n",
-       "      <td>87</td>\n",
+       "      <td>3453.611280</td>\n",
+       "      <td>256</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>2</td>\n",
        "      <td>California</td>\n",
        "      <td>0</td>\n",
-       "      <td>2815.773906</td>\n",
-       "      <td>161</td>\n",
+       "      <td>2865.618917</td>\n",
+       "      <td>141</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>2</td>\n",
        "      <td>California</td>\n",
        "      <td>1</td>\n",
-       "      <td>2920.025629</td>\n",
-       "      <td>171</td>\n",
+       "      <td>2977.086827</td>\n",
+       "      <td>185</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>2</td>\n",
        "      <td>California</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2897.736566</td>\n",
-       "      <td>178</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3013.674716</td>\n",
+       "      <td>185</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>2</td>\n",
        "      <td>California</td>\n",
        "      <td>3</td>\n",
-       "      <td>3165.451983</td>\n",
-       "      <td>193</td>\n",
+       "      <td>3282.103477</td>\n",
+       "      <td>524</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>2</td>\n",
        "      <td>California</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3499.966247</td>\n",
-       "      <td>193</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2800.150138</td>\n",
+       "      <td>54</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>2</td>\n",
        "      <td>California</td>\n",
-       "      <td>5</td>\n",
-       "      <td>4517.284483</td>\n",
-       "      <td>235</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2944.528786</td>\n",
+       "      <td>53</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
        "      <td>2</td>\n",
        "      <td>California</td>\n",
-       "      <td>6</td>\n",
-       "      <td>3597.010222</td>\n",
-       "      <td>232</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3323.230228</td>\n",
+       "      <td>107</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
        "      <td>3</td>\n",
        "      <td>New York</td>\n",
        "      <td>0</td>\n",
-       "      <td>810.530893</td>\n",
+       "      <td>813.576467</td>\n",
        "      <td>42</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -922,104 +915,104 @@
        "      <td>3</td>\n",
        "      <td>New York</td>\n",
        "      <td>1</td>\n",
-       "      <td>817.311604</td>\n",
-       "      <td>46</td>\n",
+       "      <td>875.022267</td>\n",
+       "      <td>44</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
        "      <td>3</td>\n",
        "      <td>New York</td>\n",
-       "      <td>2</td>\n",
-       "      <td>991.766233</td>\n",
-       "      <td>52</td>\n",
+       "      <td>3</td>\n",
+       "      <td>945.664762</td>\n",
+       "      <td>53</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
        "      <td>3</td>\n",
        "      <td>New York</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1162.852124</td>\n",
-       "      <td>67</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1174.861679</td>\n",
+       "      <td>61</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
        "      <td>3</td>\n",
        "      <td>New York</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1397.482495</td>\n",
-       "      <td>81</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2235.215240</td>\n",
+       "      <td>198</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
        "      <td>3</td>\n",
        "      <td>New York</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2578.626537</td>\n",
-       "      <td>136</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1379.796173</td>\n",
+       "      <td>145</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27</th>\n",
        "      <td>3</td>\n",
        "      <td>New York</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1477.256969</td>\n",
-       "      <td>84</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2290.083087</td>\n",
+       "      <td>39</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>28</th>\n",
        "      <td>4</td>\n",
        "      <td>New York</td>\n",
        "      <td>0</td>\n",
-       "      <td>858.858941</td>\n",
-       "      <td>46</td>\n",
+       "      <td>734.529773</td>\n",
+       "      <td>44</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>29</th>\n",
        "      <td>4</td>\n",
        "      <td>New York</td>\n",
        "      <td>1</td>\n",
-       "      <td>933.816092</td>\n",
-       "      <td>50</td>\n",
+       "      <td>841.303656</td>\n",
+       "      <td>48</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30</th>\n",
        "      <td>4</td>\n",
        "      <td>New York</td>\n",
        "      <td>2</td>\n",
-       "      <td>1022.042883</td>\n",
-       "      <td>52</td>\n",
+       "      <td>1097.093900</td>\n",
+       "      <td>48</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>31</th>\n",
        "      <td>4</td>\n",
        "      <td>New York</td>\n",
        "      <td>3</td>\n",
-       "      <td>1080.011295</td>\n",
-       "      <td>64</td>\n",
+       "      <td>1278.826189</td>\n",
+       "      <td>73</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>32</th>\n",
        "      <td>4</td>\n",
        "      <td>New York</td>\n",
        "      <td>4</td>\n",
-       "      <td>1426.642509</td>\n",
-       "      <td>73</td>\n",
+       "      <td>1481.309411</td>\n",
+       "      <td>89</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>33</th>\n",
        "      <td>4</td>\n",
        "      <td>New York</td>\n",
        "      <td>5</td>\n",
-       "      <td>2461.994465</td>\n",
-       "      <td>121</td>\n",
+       "      <td>2477.277242</td>\n",
+       "      <td>163</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>34</th>\n",
        "      <td>4</td>\n",
        "      <td>New York</td>\n",
        "      <td>6</td>\n",
-       "      <td>1536.159444</td>\n",
-       "      <td>95</td>\n",
+       "      <td>1464.807301</td>\n",
+       "      <td>78</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1027,41 +1020,41 @@
       ],
       "text/plain": [
        "    store_id      region  day_of_week  total_sales  nb_customers\n",
-       "0          0    New York            0   802.512064            41\n",
-       "1          0    New York            1   902.553494            48\n",
-       "2          0    New York            2   920.184932            61\n",
-       "3          0    New York            3  1081.714005            62\n",
-       "4          0    New York            4  1402.645716            95\n",
-       "5          0    New York            5  2520.183718           136\n",
-       "6          0    New York            6  1520.201774            75\n",
-       "7          1    New York            0   686.503549            39\n",
-       "8          1    New York            1   896.953437            53\n",
-       "9          1    New York            1  1045.773419            62\n",
-       "10         1    New York            2  1192.191224            92\n",
-       "11         1    New York            4  1525.217500            75\n",
-       "12         1    New York            5  2426.323658           158\n",
-       "13         1    New York            6  1510.210142            87\n",
-       "14         2  California            0  2815.773906           161\n",
-       "15         2  California            1  2920.025629           171\n",
-       "16         2  California            2  2897.736566           178\n",
-       "17         2  California            3  3165.451983           193\n",
-       "18         2  California            4  3499.966247           193\n",
-       "19         2  California            5  4517.284483           235\n",
-       "20         2  California            6  3597.010222           232\n",
-       "21         3    New York            0   810.530893            42\n",
-       "22         3    New York            1   817.311604            46\n",
-       "23         3    New York            2   991.766233            52\n",
-       "24         3    New York            3  1162.852124            67\n",
-       "25         3    New York            4  1397.482495            81\n",
-       "26         3    New York            5  2578.626537           136\n",
-       "27         3    New York            6  1477.256969            84\n",
-       "28         4    New York            0   858.858941            46\n",
-       "29         4    New York            1   933.816092            50\n",
-       "30         4    New York            2  1022.042883            52\n",
-       "31         4    New York            3  1080.011295            64\n",
-       "32         4    New York            4  1426.642509            73\n",
-       "33         4    New York            5  2461.994465           121\n",
-       "34         4    New York            6  1536.159444            95"
+       "0          0  California            0  2914.035253           168\n",
+       "1          0  California            1  2875.666793           168\n",
+       "2          0  California            2  3044.118317           170\n",
+       "3          0  California            3  3244.566601           230\n",
+       "4          0  California            4  3391.854591           198\n",
+       "5          0  California            5  4439.453731           252\n",
+       "6          0  California            6  3582.236903           215\n",
+       "7          1  California            0  2789.442373           175\n",
+       "8          1  California            0  2887.875587           207\n",
+       "9          1  California            2  2981.336418           197\n",
+       "10         1  California            3  3184.971912           183\n",
+       "11         1  California            4  3413.649285           230\n",
+       "12         1  California            5  4596.725891           312\n",
+       "13         1  California            6  3453.611280           256\n",
+       "14         2  California            0  2865.618917           141\n",
+       "15         2  California            1  2977.086827           185\n",
+       "16         2  California            5  3013.674716           185\n",
+       "17         2  California            3  3282.103477           524\n",
+       "18         2  California            0  2800.150138            54\n",
+       "19         2  California            0  2944.528786            53\n",
+       "20         2  California            3  3323.230228           107\n",
+       "21         3    New York            0   813.576467            42\n",
+       "22         3    New York            1   875.022267            44\n",
+       "23         3    New York            3   945.664762            53\n",
+       "24         3    New York            4  1174.861679            61\n",
+       "25         3    New York            5  2235.215240           198\n",
+       "26         3    New York            6  1379.796173           145\n",
+       "27         3    New York            0  2290.083087            39\n",
+       "28         4    New York            0   734.529773            44\n",
+       "29         4    New York            1   841.303656            48\n",
+       "30         4    New York            2  1097.093900            48\n",
+       "31         4    New York            3  1278.826189            73\n",
+       "32         4    New York            4  1481.309411            89\n",
+       "33         4    New York            5  2477.277242           163\n",
+       "34         4    New York            6  1464.807301            78"
       ]
      },
      "execution_count": 7,
@@ -1107,7 +1100,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
